--- a/src/App.css
+++ b/src/App.css
@@ -1,93 +1,90 @@
-/* =============================About Me style========================================= */
 .aboutme {
   display: block;
-  flex-direction: column; /* Stack elements vertically on smaller screens */
-  align-items: normal; /* Center horizontally */
+  flex-direction: column;
+  align-items: normal;
   padding: 2rem;
-  background-color:#003366; /* Light background color */
-  font-family: sans-serif; /* Use a clean font */
+  background-color:#003366;
+  font-family: sans-serif;
 }
 
 .aboutme h2 {
   font-size: 2.5rem;
   margin-bottom: 1rem;
-  color: white; /* Dark heading color */
-  text-align: left; /* Center the heading */
+  color: white;
+  text-align: left;
 }
 
 .aboutme-image-container {
-  width: 80px; /* Match the image width */
-  height: 80px; /* Match the image height */
+  width: 80px;
+  height: 80px;
   border-radius: 50%;
-  overflow: hidden; /* This is crucial for containing the image */
+  overflow: hidden;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .aboutme-image {
-  width: 100%; /* Image should fill the container */
-  height: 100%; /* Image should fill the container */
-  object-fit: cover; /* Maintain aspect ratio and cover the container */
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .aboutme-biography {
-  max-width: 100%; /* Limit biography width for readability */
-  text-align: justify; /* Justify text for a cleaner look */
-  line-height: 1.6; /* Improve readability with line spacing */
-  color:white; /* Slightly lighter text color */
+  max-width: 100%;
+  text-align: justify;
+  line-height: 1.6;
+  color:white;
 }
 
 .aboutme-biography p {
-  margin-bottom: 1rem; /* Space between paragraphs */
+  margin-bottom: 1rem;
 }
 
 .aboutme-biography strong {
-  color: white; /* Highlight key technologies */
+  color: white;
   font-weight: bold;
 }
 
-
-/* =============================Resume style========================================= */
 .resume {
   display: block;
-  flex-direction: column; /* Stack elements vertically on smaller screens */
-  align-items: normal; /* Center horizontally */
+  flex-direction: column;
+  align-items: normal;
   padding: 2rem;
-  background-color: #003366; /* Light background color */
-  font-family: sans-serif; /* Use a clean font */
+  background-color: #003366;
+  font-family: sans-serif;
 }
 
-.resume  h2 {
+.resume h2 {
   font-size: 2.5rem;
   margin-bottom: 1rem;
-  color: white; /* Dark heading color */
-  text-align: left; /* Center the heading */
+  color: white;
+  text-align: left;
 }
 
-.resume span { /* Style for the download link area */
-  display: inline; /* Make it a block element for better spacing */
+.resume span {
+  display: inline;
   margin-bottom: 2rem;
-  text-align: center; /* Center the download link */
+  text-align: center;
 }
 
 .resume-download-link {
-  display: inline-block; /* Make the link behave like an inline element */
+  display: inline-block;
   padding: 0.5rem 1rem;
-  background-color: #003366; /* Blue button color */
+  background-color: #003366;
   color: white;
   text-decoration: none;
   border-radius: 5px;
-  transition: background-color 0.3s ease; /* Smooth hover effect */
+  transition: background-color 0.3s ease;
 }
 
 .resume-download-link:hover {
-  background-color: #003366; /* Darker blue on hover */
+  background-color: #003366;
 }
 
 .resume h3 {
   font-size: 2rem;
   margin-bottom: 1rem;
   color:white;
-  margin-top: 2rem; /* Add some top margin */
+  margin-top: 2rem;
 }
 
 .resume h4 {
@@ -96,11 +93,9 @@
   color:white;
 }
 
-
-/* ===============================Contact=========================================== */
 .contact {
   padding: 2rem;
-  background-color:#003366; /* Light background */
+  background-color:#003366;
   font-family: sans-serif;
 }
 
@@ -112,12 +107,12 @@
 }
 
 .contact form {
-  max-width: 50%; /* Limit form width */
-  margin-left: 15px; /* Center the form */
+  max-width: 50%;
+  margin-left: 15px;
 }
 
 .contact label {
-  display: block; /* Make labels stack on top of inputs */
+  display: block;
   margin-bottom: 0.5rem;
   color: white;
 }
@@ -129,16 +124,16 @@
   margin-bottom: 1rem;
   border: 1px solid #ccc;
   border-radius: 5px;
-  box-sizing: border-box; /* Include padding in width */
+  box-sizing: border-box;
   font-size: 1rem;
 }
 
 .contact textarea {
-  height: 150px; /* Adjust textarea height as needed */
+  height: 150px;
 }
 
 .contact button {
-  background-color: #003366; /* Blue button */
+  background-color: #003366;
   color: #fff;
   padding: 0.8rem 1.5rem;
   border: none;
@@ -149,101 +144,94 @@
 }
 
 .contact button:hover {
-  background-color: #0056b3; /* Darker blue on hover */
+  background-color: #0056b3;
 }
 
-.contact span { /* Style for error messages */
+.contact span {
   color: write;
   font-size: 0.9rem;
   margin-top: 0.2rem;
-  display: block; /* Make error messages appear below the input */
+  display: block;
 }
 
-/* ===============================Footer=========================================== */
 .footer {
-  background-color: #003366; /* Dark background color */
+  background-color: #003366;
   padding: 20px;
-  text-align: center; /* Center the icons */
+  text-align: center;
 }
 
 .footer ul {
-  list-style: none; /* Remove bullet points */
+  list-style: none;
   padding: 0;
   margin: 0;
-  display: flex; /* Arrange list items horizontally */
-  justify-content: center; /* Center the list items horizontally */
+  display: flex;
+  justify-content: center;
 }
 
 .footer li {
-  margin: 0 15px; /* Add spacing between icons */
+  margin: 0 15px;
 }
 
 .footer a {
-  color: #fff; /* White icon color */
-  transition: color 0.3s ease; /* Smooth hover transition */
+  color: #fff;
+  transition: color 0.3s ease;
 }
 
 .footer a:hover {
-  color:wheat; /* Blue color on hover (or any color you prefer) */
+  color:wheat;
 }
 
-/* Optional: Add a subtle border to the top of the footer */
 .footer {
-  border-top: 1px solid #ddd; /* Light gray border */
+  border-top: 1px solid #ddd;
 }
 
-
-/* ==============================NavBar=================================== */
 .navigationbar {
-  display: flex; /* Use flexbox for layout */
+  display: flex;
   width: auto;
-  justify-content: space-between; /* Distribute space between items */
-  align-items: left; /* Vertically align items */
-  padding: 1rem 2rem; /* Add padding around the navbar */
-  background-color: #003366; /* Light background color */
+  justify-content: space-between;
+  align-items: left;
+  padding: 1rem 2rem;
+  background-color: #003366;
   font-family: sans-serif;
 }
 
 .navigationbar h2 {
-    margin: 0; /* remove default margin from h2 */
+    margin: 0;
 }
 
 .navigationbar ul {
-  list-style: none; /* Remove bullet points */
+  list-style: none;
   padding: 0;
   margin: 0;
-  display: flex; /* Arrange list items horizontally */
+  display: flex;
 }
 
 .navigationbar li {
-  margin-left: 1rem; /* Add spacing between list items */
+  margin-left: 1rem;
 }
 
 .nav-links {
-  text-decoration: none; /* Remove underlines from links */
-  color: white; /* Dark link color */
-  padding: 0.5rem 1rem; /* Add some padding to the links */
-  border-radius: 5px; /* Add rounded corners to the links */
-  transition: background-color 0.3s ease, color 0.3s ease; /* Smooth transitions */
+  text-decoration: none;
+  color: white;
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+  transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 .nav-links:hover {
-  background-color: #ddd; /* Light background on hover */
-  color: #007bff; /* Blue color on hover */
+  background-color: #ddd;
+  color: #007bff;
 }
 
 .nav-links.active {
-  background-color: #003366; /* Blue background for active link */
-  color: #fff; /* White text for active link */
+  background-color: #003366;
+  color: #fff;
 }
-
-/* ========================portfolio========================== */
 
 section {
   background-color: #003366;
   height: 100vh;
-} 
-
+}
 
 section h2 {
   font-size: 2.5rem;
@@ -252,18 +240,17 @@ section h2 {
   text-align: left;
   padding: 8px;
   background-color: #003366;
-} 
+}
 
 .projects {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); 
-  gap: 2rem; 
-} 
+  gap: 2rem;
+}
 
-/* Container for the project grid */
 .portfolio {
   display: grid;
-  grid-template-columns: 30%  30%; /* 50% for the first column, the rest for the second */
+  grid-template-columns: 30%  30%;
   height: 80%;
   padding: 2px 2px 2px 2px;
   background-color: #003366;
@@ -271,12 +258,9 @@ section h2 {
   gap: 20px;
 }
 
-
-/* =====================project=============================== */
-
 .project {
   display: flex;
-  flex-direction: column; /* Ensures elements stack vertically */
+  flex-direction: column;
   border: 1px solid #ddd;
   border-radius: 8px;
   padding: 15px;
@@ -284,22 +268,17 @@ section h2 {
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-/* Hover effect for the project cards */
 .project:hover {
   transform: translateY(-10px);
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 
-/* Image styling */
 .project img {
   width: 100%;
   height: auto;
   border-radius: 8px;
 }
 
-/* Title styling */
-
-/* Styling the links */
 .project .links {
   margin-top: 10px;
 }
@@ -318,13 +297,9 @@ section h2 {
   text-decoration: underline;
 }
 
-
-/* ========================Media Queries======================= */
-
-/* Responsive layout for smaller screens */
 @media (max-width: 768px) {
   .projects {
-    grid-template-columns: 1fr; /* 1 column for small screens */
+    grid-template-columns: 1fr;
   }
 
   .navigationbar {
@@ -377,22 +352,20 @@ section h2 {
   }
 }
 
-/* Responsive adjustments for Portfolio */
 @media (max-width: 768px) {
   .projects {
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Adjust column width */
-    gap: 1.5rem; /* Adjust gap */
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 1.5rem;
   }
 }
 
 @media (max-width: 500px) {
   .projects {
-    grid-template-columns: 1fr; /* Single column on very small screens */
+    grid-template-columns: 1fr;
     gap: 1rem;
   }
 }
 
-/* Responsive adjustments for Contact */
 @media (max-width: 400px) {
   .contact form {
     padding: 1rem;
