--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,74 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Playfair+Display:wght@700&display=swap');
 
+
+body{
+  margin: 2px;
+  padding: 10px;
+}
+
+/* ==============================NavBar=================================== */
+.navigationbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: left;
+  padding: 1rem 2rem;
+  font-family: sans-serif;
+  font-size: 4em;
+  list-style: none;
+  margin-bottom: 10px;
+  
+  background: linear-gradient(-45deg, #342a47 20%, #7f8185 20%, #7f8185 40%, #342a47 40%, #342a47 60%, #7f8185 60%, #7f8185 80%, #342a47 80%);
+
+}
+
+
+.navigationbar h2 {
+  margin: 0;
+}
+
+.navigationbar ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+}
+
+.navigationbar li {
+  margin-left: 1rem;
+}
+
+.nav-links {
+  text-decoration: none;
+  color: white;
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+  font-size: 3em;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.nav-links:hover {
+  background-color: #ddd;
+  color: #007bff;
+}
+
+.nav-links.active {
+  background-color: #003366;
+  color: #fff;
+}
+
 /* =============================About Me======================================== */
+
 .aboutme {
-  padding: 5rem;
   background-color: #003366;
   font-family: sans-serif;
   font-size: 4rem; /* Increased font size */
-  align-items: stretch;
-  height: auto;
+  margin: auto;
+}
+
+p {
+  text-indent: 20px; /* Indents the first line of each paragraph */
+  margin-bottom: 2rem; /* Optional: Adds spacing between paragraphs */
+  text-align: justify;
 }
 
 .aboutme h2 {
@@ -31,8 +92,6 @@
   height: 100%;
   object-fit: cover;
 }
-
-
 
 @media screen and (max-width: 768px) {
   .aboutme {
@@ -70,6 +129,76 @@
     height: 80px;
     margin-bottom: 0.5rem;
   }
+}
+/* ========================portfolio========================== */
+section {
+  background-color: #003366;
+  height: 100vh;
+}
+
+section h2 {
+  font-size: 2.5rem;
+  margin-left: 10px;
+  color: white;
+  text-align: left;
+  padding: 8px;
+  background-color: #003366;
+}
+
+.projects {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 2rem;
+}
+
+.portfolio {
+  display: grid;
+  grid-template-columns: 30% 30%;
+  height: 80%;
+  padding: 2px 2px 2px 2px;
+  background-color: #003366;
+  margin-left: 20px;
+  gap: 20px;
+}
+
+/* =====================project=============================== */
+.project {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 15px;
+  background-color: #fff;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.project:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.project img {
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+}
+
+.project .links {
+  margin-top: 10px;
+}
+
+.project .links a {
+  display: inline-block;
+  margin: 5px 0;
+  color: #007bff;
+  text-decoration: none;
+  font-size: 1rem;
+  transition: color 0.3s ease;
+}
+
+.project .links a:hover {
+  color: #0056b3;
+  text-decoration: underline;
 }
 
 /* =============================Resume style========================================= */
@@ -343,119 +472,4 @@ ul li {
 
 .footer {
   border-top: 1px solid #ddd;
-}
-
-/* ==============================NavBar=================================== */
-.navigationbar {
-  display: flex;
-  width: auto;
-  justify-content: space-between;
-  align-items: left;
-  padding: 1rem 2rem;
-  background-color: #003366;
-  font-family: sans-serif;
-}
-
-.navigationbar h2 {
-  margin: 0;
-}
-
-.navigationbar ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
-}
-
-.navigationbar li {
-  margin-left: 1rem;
-}
-
-.nav-links {
-  text-decoration: none;
-  color: white;
-  padding: 0.5rem 1rem;
-  border-radius: 5px;
-  transition: background-color 0.3s ease, color 0.3s ease;
-}
-
-.nav-links:hover {
-  background-color: #ddd;
-  color: #007bff;
-}
-
-.nav-links.active {
-  background-color: #003366;
-  color: #fff;
-}
-
-/* ========================portfolio========================== */
-section {
-  background-color: #003366;
-  height: 100vh;
-}
-
-section h2 {
-  font-size: 2.5rem;
-  margin-left: 10px;
-  color: white;
-  text-align: left;
-  padding: 8px;
-  background-color: #003366;
-}
-
-.projects {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 2rem;
-}
-
-.portfolio {
-  display: grid;
-  grid-template-columns: 30% 30%;
-  height: 80%;
-  padding: 2px 2px 2px 2px;
-  background-color: #003366;
-  margin-left: 20px;
-  gap: 20px;
-}
-
-/* =====================project=============================== */
-.project {
-  display: flex;
-  flex-direction: column;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  padding: 15px;
-  background-color: #fff;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.project:hover {
-  transform: translateY(-10px);
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-}
-
-.project img {
-  width: 100%;
-  height: auto;
-  border-radius: 8px;
-}
-
-.project .links {
-  margin-top: 10px;
-}
-
-.project .links a {
-  display: inline-block;
-  margin: 5px 0;
-  color: #007bff;
-  text-decoration: none;
-  font-size: 1rem;
-  transition: color 0.3s ease;
-}
-
-.project .links a:hover {
-  color: #0056b3;
-  text-decoration: underline;
 }
