--- a/src/App.css
+++ b/src/App.css
@@ -17,15 +17,16 @@ html, body {
   font-size: 64px; /* 4em = 64px */
   list-style: none;
   background: linear-gradient(-45deg, 
-  #154547 20%, 
+  #180738 20%, 
   #b2bfbf 20%, 
   #b2bfbf 40%, 
-  #154547 40%, 
-  #154547 60%, 
+  #180738 40%, 
+  #180738 60%, 
   #b2bfbf 60%, 
   #b2bfbf 80%, 
-  #154547 80%
+  #180738 80%
 );
+
 }
 
 .navigationbar h2 {
@@ -214,8 +215,7 @@ section h2 {
   padding: 32px; /* 2rem = 32px */
   background-color: #003366;
   font-family: sans-serif;
-  font-size: 64px; /* 4rem = 64px */
-  align-items: stretch;
+  font-size: 76px; 
 }
 
 .resume h1 {
