--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@ html, body {
 /* ==============================NavBar=================================== */
 .navigationbar {
   display: flex;
+  background-color: #003366;
   padding-top: 10px;
   padding-bottom: 0%;
   justify-content: space-between;
@@ -16,7 +17,7 @@ html, body {
   font-family: sans-serif;
   font-size: 64px; /* 4em = 64px */
   list-style: none;
-  background: linear-gradient(-45deg, 
+  /* background: linear-gradient(-45deg, 
   #180738 20%, 
   #b2bfbf 20%, 
   #b2bfbf 40%, 
@@ -25,7 +26,7 @@ html, body {
   #b2bfbf 60%, 
   #b2bfbf 80%, 
   #180738 80%
-);
+); */
 
 }
 
