--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ html, body {
   font-family: sans-serif;
   font-size: 64px; /* 4em = 64px */
   list-style: none;
-  /* background: linear-gradient(-45deg, 
+  background: linear-gradient(-45deg, 
   #180738 20%, 
   #b2bfbf 20%, 
   #b2bfbf 40%, 
@@ -28,7 +28,7 @@ html, body {
   #b2bfbf 60%, 
   #b2bfbf 80%, 
   #180738 80%
-); */
+);
 
 }
 
