--- a/src/App.css
+++ b/src/App.css
@@ -416,13 +416,13 @@ section h2 {
 }
 
 .footer a:hover {
-  color: white;
+  color: rgba(208, 153, 153, 0.546);
   transform: scale(1.2);
 }
 
 /* ===============================Lists=========================================== */
 ul {
-  list-style-type: disc;
+  list-style-type:none;
   margin-left: 32px; /* 2rem = 32px */
   color: white;
 }
