--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ html, body {
   font-family: sans-serif;
   font-size: 64px; /* 4em = 64px */
   list-style: none;
-  background: linear-gradient(-45deg, 
+  /* background: linear-gradient(-45deg, 
   #19014A 20%, 
   #b2bfbf 20%, 
   #b2bfbf 40%, 
@@ -25,7 +25,7 @@ html, body {
   #b2bfbf 60%, 
   #b2bfbf 80%, 
   #19014A 80%
-);
+); */
 }
 
 .navigationbar h2 {
